opsiconfd (4.0.6.1-1) UNRELEASED; urgency=low

  * Info page: Show info about ten most executed RPCs
  * Setting +x on /etc/init.d/opsiconfd for openSuse 13.2

 -- Niko Wenselowski <n.wenselowski@uib.de>  Wed, 07 Jan 2015 10:20:41 +0100

opsiconfd (4.0.5.3-1) experimental; urgency=low

  * RPC call statistics are stored in a deque for faster operation
  * Reset maxAuthenticationFailure before connection will blocked (eu)

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 18 Nov 2014 18:03:47 +0100

opsiconfd (4.0.5.2-1) stable; urgency=low

  * Info page: display the correct percentage if calls failed
  * Statistics: display correct result-length if returned type is dict
  * Info page: Show more info about threads if possible
  * RHEL / CentOS 7 and Fedora: Fix logrotate configuration

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 20 Oct 2014 09:38:46 +0200

opsiconfd (4.0.5.1-7) experimental; urgency=low

  * Fix for newer logrotate-versions not applied on SLES because 11SP3
    provides an updated version that can handle su directive

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 19 Aug 2014 16:41:48 +0200

opsiconfd (4.0.5.1-6) experimental; urgency=low

  * Suggesting only on SLES, not everyone.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Wed, 13 Aug 2014 16:27:34 +0200

opsiconfd (4.0.5.1-5) experimental; urgency=low

  * python-rrdtool is not required but suggested.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Wed, 13 Aug 2014 16:14:13 +0200

opsiconfd (4.0.5.1-4) experimental; urgency=low

  * Lowering required debhelper version for building Ubuntu 10.04

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 04 Aug 2014 14:25:31 +0200

opsiconfd (4.0.5.1-3) experimental; urgency=low

  * Re-enabling build dependency python-support for older distros.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 04 Aug 2014 13:59:27 +0200

opsiconfd (4.0.5.1-2) experimental; urgency=low

  * Using dh_python instead of python-support
