@@ -123,7 +123,12 @@
 	#   log format = [%l] [%D] %M (%F|%N)
 
 	log format = [%l] [%D] %M (%F|%N)
-	
+
+	# Limit the size of logfiles that are either read or written through
+	# an opsi backend.
+	# Setting this to 0 will disable any limiting.
+	max log size = 5000000
+
 	# Maximum number of execution statistics to store in memory.
 	# Execution statistics can be written to the log file by sending
 	# a SIGHUP to opsiconfd.
