@@ -2,8 +2,9 @@ opsiconfd (4.0.6.1-1) UNRELEASED; urgency=low
 
   * Info page: Show info about ten most executed RPCs
   * Setting +x on /etc/init.d/opsiconfd for openSuse 13.2
+  * Make it possible to set a limit for the size of logfiles.
 
- -- Niko Wenselowski <n.wenselowski@uib.de>  Wed, 07 Jan 2015 10:20:41 +0100
+ -- Niko Wenselowski <n.wenselowski@uib.de>  Fri, 09 Jan 2015 16:16:01 +0100
 
 opsiconfd (4.0.5.3-1) experimental; urgency=low
 
